frontend:datatables,Chart Data Realisasi,

--- a/public/template/assets/css/atlantis.css
+++ b/public/template/assets/css/atlantis.css
@@ -22787,3 +22787,7 @@ body[data-background-color="dark"] .board {
 .modal-notifikasi .time {
     font-size: 12px;
 }
+
+.search-data {
+    width: 300px;
+}
