--- a/public/template/assets/css/atlantis.css
+++ b/public/template/assets/css/atlantis.css
@@ -22791,3 +22791,16 @@ body[data-background-color="dark"] .board {
 .search-data {
     width: 300px;
 }
+
+.title-po {
+    font-size: 13px;
+    font-weight: 500;
+    margin: 0;
+}
+
+.content-po {
+    padding: 0;
+    font-size: 17px;
+    font-weight: 600;
+    margin: 0;
+}
