--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1595,6 +1595,13 @@ select {
   width: 100%;
   background-color: rgb(0 0 0 / 0.5);
 }
+.layout-overlay-edit-form {
+  position: fixed;
+  z-index: 30;
+  height: 100vh;
+  width: 100%;
+  background-color: rgb(0 0 0 / 0.5);
+}
 .modal {
   margin-left: auto;
   margin-right: auto;
@@ -1819,8 +1826,12 @@ table td {
 }
 .pagination {
   margin-top: 0.5rem;
+  border-style: none;
 }
-.pagination .btn-pagination {
+.ui .menu {
+  border-style: none;
+}
+.pagination .item {
   border-radius: 0.375rem;
   border-width: 1px;
   padding-left: 1.25rem;
@@ -1828,7 +1839,7 @@ table td {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
-.pagination .btn-pagination.is-active {
+.pagination .item.active {
   --tw-bg-opacity: 1;
   background-color: rgb(220 53 69 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
