--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -167,6 +167,20 @@
     }
 }
 
+.select2.select2-container {
+    width: 100% !important;
+}
+.select2.select2-container .select2-selection {
+    height: 45px;
+}
+.select2.select2-container .select2-selection .select2-selection__rendered {
+    margin-top: 0.5rem;
+    margin-left: 0.4rem;
+}
+.select2.select2-container .select2-selection .select2-selection__arrow {
+    margin-top: 0.3rem;
+    margin-right: 0.3rem;
+}
 .layout-collapse {
     animation: slideleft 0.2s ease-out;
 }
