develop : revisi after meet

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -98,7 +98,7 @@
     }
 
     .tables {
-        @apply overflow-x-auto p-2;
+        @apply lg:overflow-visible relative overflow-x-auto p-2;
     }
     body {
         @apply overflow-hidden;
@@ -129,7 +129,7 @@
         @apply text-left;
     }
     table {
-        @apply border-collapse border;
+        @apply border-collapse border; 
     }
     table th {
         @apply font-semibold border border-l-0 border-r-0;
@@ -139,7 +139,7 @@
         @apply p-2 text-center text-sm;
     }
     table td {
-        @apply border-b text-theme-text;
+        @apply border-b text-theme-text relative;
     }
     .pagination {
         @apply mt-2 border-none;
@@ -160,10 +160,10 @@
         @apply bg-gray-100 text-gray-500 cursor-not-allowed;
     }
     .dropdown {
-        @apply relative z-0 max-w-[150px] mx-auto;
+        @apply z-0 max-w-full  mx-auto;
     }
     .dropdown-menu {
-        @apply hidden border bg-white absolute text-left text-gray-700 z-30 right-32 bottom-0;
+        @apply hidden border bg-white divide-y absolute text-left text-gray-700 z-30 right-32 bottom-0;
     }
     .item-dropdown {
         @apply bg-white hover:bg-gray-200 py-2 px-8 block;
