--- a/public/css/app.css
+++ b/public/css/app.css
@@ -553,6 +553,9 @@ video {
 .left-0 {
   left: 0px;
 }
+.left-3 {
+  left: 0.75rem;
+}
 .right-0 {
   right: 0px;
 }
@@ -564,9 +567,6 @@ video {
 }
 .top-11 {
   top: 2.75rem;
-}
-.left-3 {
-  left: 0.75rem;
 }
 .z-0 {
   z-index: 0;
@@ -644,6 +644,12 @@ video {
 .mt-1 {
   margin-top: 0.25rem;
 }
+.mt-10 {
+  margin-top: 2.5rem;
+}
+.mt-12 {
+  margin-top: 3rem;
+}
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -673,12 +679,6 @@ video {
 }
 .mt-\[0\.3rem\] {
   margin-top: 0.3rem;
-}
-.mt-10 {
-  margin-top: 2.5rem;
-}
-.mt-12 {
-  margin-top: 3rem;
 }
 .mt-\[4px\] {
   margin-top: 4px;
@@ -731,14 +731,14 @@ video {
 .h-9 {
   height: 2.25rem;
 }
+.h-\[300px\] {
+  height: 300px;
+}
 .h-\[528px\] {
   height: 528px;
 }
 .h-screen {
   height: 100vh;
-}
-.h-\[300px\] {
-  height: 300px;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -1040,6 +1040,10 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(107 114 128 / var(--tw-bg-opacity));
 }
+.bg-gray-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+}
 .bg-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
@@ -1069,17 +1073,13 @@ video {
 .bg-theme-primary\/10 {
   background-color: rgb(220 53 69 / 0.1);
 }
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-.bg-gray-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
-}
 .bg-theme-secondary {
   --tw-bg-opacity: 1;
   background-color: rgb(18 44 79 / var(--tw-bg-opacity));
+}
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 .fill-current {
   fill: currentColor;
@@ -1230,6 +1230,10 @@ video {
   font-size: 1.875rem;
   line-height: 2.25rem;
 }
+.text-7xl {
+  font-size: 4.5rem;
+  line-height: 1;
+}
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
@@ -1249,10 +1253,6 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-.text-7xl {
-  font-size: 4.5rem;
-  line-height: 1;
 }
 .font-bold {
   font-weight: 700;
@@ -1356,6 +1356,10 @@ video {
   --tw-text-opacity: 1;
   color: rgb(220 53 69 / var(--tw-text-opacity));
 }
+.text-theme-secondary {
+  --tw-text-opacity: 1;
+  color: rgb(18 44 79 / var(--tw-text-opacity));
+}
 .text-theme-text {
   --tw-text-opacity: 1;
   color: rgb(92 92 92 / var(--tw-text-opacity));
@@ -1363,10 +1367,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-.text-theme-secondary {
-  --tw-text-opacity: 1;
-  color: rgb(18 44 79 / var(--tw-text-opacity));
 }
 .underline {
   text-decoration-line: underline;
@@ -1738,8 +1738,15 @@ video {
   }
 }
 .tables {
+  position: relative;
   overflow-x: auto;
   padding: 0.5rem;
+}
+@media (min-width: 1024px) {
+
+  .tables {
+    overflow: visible;
+  }
 }
 body {
   overflow: hidden;
@@ -1775,6 +1782,7 @@ table th,
   line-height: 1.25rem;
 }
 table td {
+  position: relative;
   border-bottom-width: 1px;
   --tw-text-opacity: 1;
   color: rgb(92 92 92 / var(--tw-text-opacity));
@@ -1811,11 +1819,10 @@ table td {
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 .dropdown {
-  position: relative;
   z-index: 0;
   margin-left: auto;
   margin-right: auto;
-  max-width: 150px;
+  max-width: 100%;
 }
 .dropdown-menu {
   position: absolute;
@@ -1823,6 +1830,13 @@ table td {
   bottom: 0px;
   z-index: 30;
   display: none;
+}
+.dropdown-menu > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-y-reverse: 0;
+  border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
+  border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
+}
+.dropdown-menu {
   border-width: 1px;
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
