--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -160,10 +160,10 @@
         @apply bg-gray-100 text-gray-500 cursor-not-allowed;
     }
     .dropdown {
-        @apply relative;
+        @apply relative mx-auto;
     }
     .dropdown-menu {
-        @apply hidden border bg-white divide-y absolute text-left text-gray-700 z-30 right-32 bottom-0;
+        @apply hidden border bg-white divide-y absolute text-left text-gray-700 z-30 bottom-0;
     }
     .item-dropdown {
         @apply bg-white hover:bg-gray-200 py-2 px-8 block;
@@ -172,7 +172,7 @@
         @apply lg:w-[400px] w-full h-screen  bg-white z-40 fixed right-0 border-l;
     }
 }
-        
+
 .select2.select2-container {
     width: 100% !important;
 }
