--- a/public/css/app.css
+++ b/public/css/app.css
@@ -562,6 +562,12 @@ video {
 .right-2 {
   right: 0.5rem;
 }
+.right-20 {
+  right: 5rem;
+}
+.right-60 {
+  right: 15rem;
+}
 .top-10 {
   top: 2.5rem;
 }
@@ -781,6 +787,15 @@ video {
 }
 .max-w-7xl {
   max-width: 80rem;
+}
+.max-w-\[250px\] {
+  max-width: 250px;
+}
+.max-w-\[280px\] {
+  max-width: 280px;
+}
+.max-w-\[450px\] {
+  max-width: 450px;
 }
 .max-w-full {
   max-width: 100%;
@@ -1738,7 +1753,6 @@ video {
   }
 }
 .tables {
-  position: relative;
   overflow-x: auto;
   padding: 0.5rem;
 }
@@ -1782,7 +1796,6 @@ table th,
   line-height: 1.25rem;
 }
 table td {
-  position: relative;
   border-bottom-width: 1px;
   --tw-text-opacity: 1;
   color: rgb(92 92 92 / var(--tw-text-opacity));
@@ -1819,14 +1832,12 @@ table td {
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 .dropdown {
-  z-index: 0;
+  position: relative;
   margin-left: auto;
   margin-right: auto;
-  max-width: 100%;
 }
 .dropdown-menu {
   position: absolute;
-  right: 8rem;
   bottom: 0px;
   z-index: 30;
   display: none;
